--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="D:\DevWeb I\DEV_Portifolio\Icons\icon.png" type="image/x-icon">
-    <title>Portifolio</title>
+    <link rel="icon" href="D:\DevWeb I\DEV_Portifolio\webpage\icons\icon.png" type="image/x-icon">
+    <title>Lucas Costa - Portifolio</title>
 </head>
 
     <!--Cabeçalho com menu-->
@@ -22,7 +22,7 @@
         <!--Foto e nome-->
         <div id="header">
             <div>
-                <img class="foto" src="D:\DevWeb I\DEV_Portifolio\Icons\gojo.jpg" alt="Satoru GojoKKJKJ">
+                <img class="foto" src="D:\DevWeb I\DEV_Portifolio\webpage\icons\gojo.jpg" alt="Satoru GojoKKJKJ">
             </div>
             <h1>Lucas Costa Dos Santos</h1>
         </div>
@@ -59,6 +59,7 @@
     <section id="contato">
         <h2>Contato</h2>
         <ul>
+            
             <li>LinkedIn: <a href="https://br.linkedin.com/in/lucascostadossantos" target="_blank">Lucas Costa</a></li>
             <li>GitHub: <a href="https://github.com/costadossantoslucas" target="_blank">GitHub Lucas</a></li>
         </ul>
