--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="D:\DevWeb I\DEV_Portifolio\webpage\icons\icon.png" type="image/x-icon">
+    <link rel="icon" href="./webpage\icons\icon.png" type="image/x-icon">
     <title>Lucas Costa - Portifolio</title>
 </head>
 
@@ -22,7 +22,7 @@
         <!--Foto e nome-->
         <div id="header">
             <div>
-                <img class="foto" src="D:\DevWeb I\DEV_Portifolio\webpage\icons\gojo.jpg" alt="Satoru GojoKKJKJ">
+                <img class="foto" src="./webpage\icons\gojo.jpg" alt="Satoru GojoKKJKJ">
             </div>
             <h1>Lucas Costa Dos Santos</h1>
         </div>
