--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     <!-- Seção Sobre Mim -->
     <section id="sobre-mim">
         <h2>Sobre mim</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        
+        <p>Estou apenas testando esse campo, quero colocar um iframe aqui do spotify para poder tocar uma musiquinha, ou então posso colocar uma playlist com as minhas musicas mais ouvidas pois vai ser atualizada sempre com certeza ksksks</p>
+        <div>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpeMpxGqAUckw?utm_source=generator" width="40%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
         <img class="imagem1" src="./assets/imagem1.png" alt="Imagem sobre mim">
     </section>
 
