--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#sobre-mim">Sobre mim</a></li>
                 <li><a href="#portfolio">Portfólio</a></li>
-                <li><a href="#carreira">Carreira</a></li>
+                <li><a href="#certificados">Certificados</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
@@ -40,7 +40,7 @@
         <div>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpeMpxGqAUckw?utm_source=generator" width="40%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-        <img class="imagem1" src="./assets/imagem1.png" alt="Imagem sobre mim">
+        <img id="minhafoto" src="./assets/icons/foto.JPEG" alt="Imagem sobre mim">
     </section>
 
     <!-- Seção Portfólio -->
@@ -49,17 +49,16 @@
         <div class="portfolio-item">
             <h3>Heading</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <img class="cert" src="./assets/cert1.png" alt="Certificado 1">
         </div>
     </section>
 
-    <!-- Seção Carreira -->
-    <section id="carreira">
+    <!-- Seção Certificados -->
+    <section id="certificados">
         <h2>Certificados</h2>
         <div class="certificados">
-            <img src="./assets/cert1.png" alt="Certificado 1">
-            <img src="./assets/cert2.png" alt="Certificado 2">
-            <img src="./assets/cert3.png" alt="Certificado 3">
+            <img src="./assets/icons/certjava.jpg" alt="Certificado Java">
+            <img src="./assets/icons/Conectar.png" alt="Certificado Discover">
+            <img src="./assets/icons/Conectar.png" alt="Certificado Discover">
         </div>
     </section>
 
