Atualizado v4.1 botão sobre mim corrigido

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
 
     <!-- Seção Sobre Mim -->
-    <section class="sobre-mim">
+    <section id="sobre-mim">
         
         <h2>Sobre mim</h2>
         <p>Sou um desenvolvedor em início de carreira, com conhecimento básico em Python e Java, com foco em orientação a objetos. Atualmente, 
