--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/icons/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/img.css">
+    <link rel="stylesheet" href="./assets/css/sobre-mim.css">
+    <link rel="stylesheet" href="./assets/css/portifolio.css">
+    <link rel="stylesheet" href="./assets/css/certificados.css">
+    <link rel="stylesheet" href="./assets/css/toppage.css">
+    <link rel="stylesheet" href="./assets/css/section.css">
+
     <title>Lucas Costa - Portifólio Web</title>
+
 </head>
     <body>
     <!-- Cabeçalho -->
@@ -51,13 +59,13 @@
     <section id="sobre-mim">
         
         <h2>Sobre mim</h2>
+
         <p>Sou um desenvolvedor em início de carreira, com conhecimento básico em Python e Java, com foco em orientação a objetos. Atualmente, 
             estou expandindo minhas habilidades, aprendendo HTML, CSS e JavaScript, tecnologias fundamentais para o desenvolvimento web. Este 
             portfólio é meu primeiro projeto, onde coloco em prática o que venho aprendendo. Além da programação, sou apaixonado por música e costumo 
             ouvir uma variedade de faixas no Spotify. Na seção ao lado, compartilho uma playlist com as músicas que mais ouço ultimamente, sempre 
-            atualizada com novas descobertas. Acredito que a música complementa o processo criativo, trazendo inspiração e foco ao meu trabalho.</p>
-        
-            <!-- <img id="minhafoto" src="./assets/icons/foto2.jpeg" alt="Imagem sobre mim"> -->
+            atualizada com novas descobertas. Acredito que a música complementa o processo criativo, trazendo inspiração e foco ao meu trabalho.
+        </p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpeMpxGqAUckw?utm_source=generator"
             width="40%" 
             height="352" 
@@ -82,9 +90,9 @@
     <section id="certificados">
         <h2>Certificados</h2>
         <div class="certificados">
-            <img src="./assets/icons/cert1.png" alt="Certificado JavaScript">
-            <img src="./assets/icons/cert2.png" alt="Certificado Conectar">
-            <img src="./assets/icons/cert3.jpg" alt="Certificado Java">
+            <img src="./assets/icons/cert1.png" alt="Certificado JavaScript" class="certificado">
+            <img src="./assets/icons/cert2.png" alt="Certificado Conectar" class="certificado">
+            <img src="./assets/icons/cert3.jpg" alt="Certificado Java" class="certificado">
         </div>
     </section>
 
