--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#sobre-mim">Sobre mim</a></li>
-                <li><a href="#portifolio">Portfólio</a></li>
+                <li><a href="#portfolio">Portfólio</a></li>
                 <li><a href="#certificados">Certificados</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
