--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
         <p>Sou um desenvolvedor em início de carreira, com conhecimento básico em Python e Java, com foco em orientação a objetos. Atualmente, 
             estou aprendendo HTML, CSS e JavaScript, tecnologias para desenvolvimento web. Este portfólio é meu primeiro projeto, onde coloco 
-            em prática o que venho aprendendo. Além da programação, sou apaixonado por música e costumo 
+            em prática o meu aprendizado. Além da programação, sou apaixonado por música e costumo 
             ouvir uma variedade de estilos. Vou deixar uma playlist com as músicas que mais ouço ultimamente, sempre 
             atualizada com novas descobertas. Acredito que a música complementa o processo criativo, trazendo inspiração e foco ao trabalho.
         </p>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpeMpxGqAUckw?utm_source=generator" width="90%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpeMpxGqAUckw?utm_source=generator" width="552px" height="352px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             
     </section>
 
