--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <a href="https://costadossantoslucas.github.io/bomba" target="_blank">
                 <img class="template" src="./assets/icons/template3.png" alt="Projeto 2">
                 </a>
-                <p>Sistema de uma bomba de combustivel, onde é possivel alterar a gasolina, o valor e apresentar os dados da operação.</p>
+                <p>Painel de contorle de uma bomba de combustivel, onde é possivel alterar a gasolina, o valor e apresentar os dados da operação.</p>
                 
             </div>
             
