--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div>
         
             <h2>Hello World!</h2>
-            <h3>Me chamo Lucas, sou desenvolvedor Web</h3>
+            <h3>Me chamo Lucas, sou desenvolvedor WEB<br>Analista de sistema e técnico em TI.</h3>
         
         </div>
         <img class="foto" src="./assets/icons/foto.JPEG" alt="Foto Lucas">
