--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h3>Me chamo Lucas, sou desenvolvedor WEB<br>Analista de sistema e técnico em TI.</h3>
         
         </div>
-        <img class="foto" src="./assets/icons/foto.JPEG" alt="Foto Lucas">
+        <img class="foto" src="./assets/icons/foto.png" alt="Foto Lucas">
     </section>
 
     <!-- Seção Sobre Mim -->
